added hyperiondev bootcamp completion

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                     Cum Laude my Software developement course at Nelson Mandela
                     University learned how to make databases, desktop and web based
                     systems.<br> <br>
-                    <a>Hyperion Dev <br>
+                    <a href="https://www.hyperiondev.com/portfolio/81994/">Hyperion Dev <br>
                         Software Engineering boot-camp <br>
-                        March 2022 - Present <br>
+                        March 2022 - July 2022 <br>
                     </a> 
                     Did a 3 month software engineering bootcamp at HyperionDev
                     in 2022, learned two new languages Python and Java. Learned a 
